--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.8.3",
     "expo": "~52.0.42",
     "expo-constants": "~17.0.8",
+    "expo-screen-orientation": "^8.0.4",
     "expo-status-bar": "^2.0.1",
     "lucide-react-native": "^0.486.0",
     "react": "18.3.1",
