--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "react": "18.3.1",
     "react-native": "^0.76.8",
     "react-native-config": "^1.5.5",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-gesture-handler": "^2.25.0",
+    "react-native-reanimated": "^2.17.0",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.11.2",
