--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.1.2",
     "axios": "^1.8.3",
-    "expo": "~52.0.42",
+    "expo": "^52.0.46",
     "expo-constants": "~17.0.8",
     "expo-screen-orientation": "^8.0.4",
     "expo-status-bar": "^2.0.1",
@@ -28,6 +28,11 @@
     "react-native-svg": "^15.8.0",
     "react-native-webview": "13.12.5"
   },
+  "scripts": {
+    "test": "jest --config jest.config.js",
+    "test:watch": "jest --watch --config jest.config.js",
+    "test:coverage": "jest --coverage --config jest.config.js"
+  },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
@@ -39,13 +44,15 @@
     "@react-native/eslint-config": "0.78.0",
     "@react-native/metro-config": "0.78.0",
     "@react-native/typescript-config": "0.78.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^29.5.13",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^19.0.0",
     "babel-plugin-react-native-config": "^0.0.3",
     "babel-preset-expo": "^12.0.9",
     "eslint": "^8.19.0",
-    "jest": "^29.6.3",
+    "jest": "^29.7.0",
     "prettier": "2.8.8",
     "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "19.0.0",
